arm64/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: get-namespaces
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: vinicius.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-namespace
                port:
                  number: 80
  ingressClassName: nginx
